// Copyright 2018-2022 Cargill Incorporated
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

message ScabbardMessageV3 {
    enum Type {
        UNSET = 0;
        CONSENSUS_MESSAGE = 1;
    }

    Type message_type = 1;

    // Set if type is CONSENSUS_MESSAGE
    bytes consensus_message = 2;
}

message TwoPhaseCommitMessage {
    enum Type {
        UNSET = 0;
        VOTE_REQUEST = 1;
        VOTE_RESPONSE = 2;
        COMMIT = 3;
        ABORT = 4;
        DECISION_REQUEST = 5;
    }

    Type message_type = 1;

    VoteRequest vote_request = 2;
    VoteResponse vote_response = 3;
    Commit commit = 4;
    Abort abort = 5;
    DecisionRequest decision_request = 6;
}

message VoteRequest {
    uint64 epoch = 1;
    bytes value = 2;
}

message VoteResponse {
    uint64 epoch = 1;
    bool response = 2;
}

message Commit {
    uint64 epoch = 1;
}

message Abort {
    uint64 epoch = 1;
}

message DecisionRequest {
    uint64 epoch = 1;
}
